<resources>
    <string name="app_name">Spendr</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_empty_reminder_text">You\'d have to create a reminder to see one</string>
    <string name="tv_empty_budget_text">Nothing to see here... yet!</string>

    <string name="tv_onboarding_title_1">Welcome to Spendr</string>
    <string name="tv_onboarding_title_2">Visualize Your Budget</string>
    <string name="tv_onboarding_title_3">Set Payment Reminders</string>
    <string name="tv_onboarding_text_1">Take control of your finances. Set goals, track expenses, and save money easily. Let\'s begin!</string>
    <string name="tv_onboarding_text_2">Get insights into your spending. Understand your expenses with charts and visuals. Make smart financial choices.</string>
    <string name="tv_onboarding_text_3">Never miss a payment again. Set reminders and manage bills effortlessly. Stay organized with Spendr.</string>

    <string name="tv_delete_entries_header">Delete Entries?</string>
    <string name="tv_delete_entries_body">All entries in your Spendr budget will be completely lost. This action cannot be undone</string>
    <string name="tv_delete_reminders_header">Delete Reminders?</string>
    <string name="tv_delete_reminders_body">You can either clear expired reminders or all reminders</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_expired_reminders">Expired</string>
    <string name="delete_all_reminders">All</string>
    <string name="activity">Activity</string>
    <string name="income">Income</string>
    <string name="expenditure">Expenditure</string>
    <string name="set_date">Set date</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="choose_category">Choose category</string>
    <string name="save">Save</string>
    <string name="text">Text</string>
    <string name="pdf">PDF</string>
    <string name="exporting_pdf">Exporting PDF...</string>
    <string name="click_to_locate_file_in_file_explorer_or_open_with_pdf_viewer">Click to locate file in File Explorer or open with PDF viewer</string>
    <string name="locate">Locate</string>
    <string name="view">View</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="you_ll_need_to_enable_notifications_to_set_payment_reminders">You\'ll need to enable notifications to set payment reminders</string>
    <string name="open_settings">Open settings</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="category">Category:</string>
    <string name="savings">Savings</string>
    <string name="see_all">See All</string>
    <string name="all">All</string>
    <string name="activity_summary">Activity Summary</string>
    <string name="visualizer">Visualizer</string>
    <string name="budget">Budget</string>
    <string name="overview">Overview</string>
    <string name="done">Done</string>
    <string name="new_tv">New</string>
    <string name="entry_detail">Entry Detail</string>
    <string name="extras">Extras</string>
    <string name="reminders">Reminders</string>
    <string name="balance">Balance:</string>
    <string name="settings">Settings</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="enter_name">Enter name</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="subject">Subject</string>
    <string name="amount">Amount</string>
    <string name="repeating_reminder">Repeating reminder?</string>
    <string name="reason_e_g_groceries_in_march">Reason (e.g., \'Groceries in March\')</string>
</resources>