<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:paddingHorizontal="24dp"
    android:paddingVertical="24dp">

    <TextView
        android:id="@+id/tv_dialog_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/tv_delete_entries_header"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dialog_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:padding="8dp"
        android:text="@string/tv_delete_entries_body"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_header" />

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/btn_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minWidth="120dp"
        android:minHeight="64dp"
        app:layout_constraintEnd_toStartOf="@id/btn_positive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_body"
        app:neumorph_shadowColorDark="@color/neumorph_card_dark_shadow_color"
        app:neumorph_shadowColorLight="@color/neumorph_card_light_shadow_color"
        app:neumorph_shadowElevation="3dp"
        app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
        app:neumorph_shapeType="basin">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/anim_cancel"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="12dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="anim_cross.json"
            app:lottie_loop="true"
            app:lottie_repeatMode="restart"
            app:lottie_speed="1.3" />

        <TextView
            android:id="@+id/tv_negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:text="@string/cancel"
            android:textColor="@android:color/background_dark" />
    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/btn_positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:minHeight="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_negative"
        app:layout_constraintTop_toTopOf="@id/btn_negative"
        app:neumorph_shadowColorDark="@color/neumorph_card_dark_shadow_color"
        app:neumorph_shadowColorLight="@color/neumorph_card_light_shadow_color"
        app:neumorph_shadowElevation="3dp"
        app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
        app:neumorph_shapeType="basin">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/anim_delete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="12dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="anim_tick.json"
            app:lottie_loop="true"
            app:lottie_repeatMode="restart"
            app:lottie_speed="0.57" />

        <TextView
            android:id="@+id/tv_positive_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:text="@string/delete"
            android:textColor="@android:color/background_dark" />
    </soup.neumorphism.NeumorphCardView>

</androidx.constraintlayout.widget.ConstraintLayout>