<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/item_summary_neumorphic_card"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:neumorph_lightSource="leftTop"
        app:neumorph_shadowColorDark="@color/neumorph_card_dark_shadow_color"
        app:neumorph_shadowColorLight="@color/neumorph_card_light_shadow_color"
        app:neumorph_shadowElevation="4dp"
        app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
        app:neumorph_shapeType="flat">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_month_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/all"
                android:textColor="@color/card_text_color"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_inflow_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/pigment_green"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/materialDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="N500" />

            <TextView
                android:id="@+id/tv_inflow_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/income"
                android:textColor="@color/pigment_green"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@id/tv_inflow_amount"
                app:layout_constraintStart_toStartOf="@id/tv_inflow_amount"
                app:layout_constraintTop_toBottomOf="@id/tv_inflow_amount" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDivider"
                android:layout_width="0.6dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="10dp" />

            <TextView
                android:id="@+id/tv_outflow_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/syracuse_red_orange"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/materialDivider"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="N300" />

            <TextView
                android:id="@+id/tv_outflow_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/expenditure"
                android:textColor="@color/syracuse_red_orange"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@id/tv_outflow_amount"
                app:layout_constraintStart_toStartOf="@id/tv_outflow_amount"
                app:layout_constraintTop_toBottomOf="@id/tv_outflow_amount" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </soup.neumorphism.NeumorphCardView>
</androidx.constraintlayout.widget.ConstraintLayout>